stylesheets/screen.css
/* ... */
/******************************
+ About Us 
******************************/

#three_columns {
  border-top: 1px solid #3d3832;
  padding: 20px 0 10px 0;
  color: #E6E0D9;
}

#three_columns #what_we_do {
  float: left;
  width: 245px;
  padding-right: 45px;
}

#three_columns #our_philosophy {
  float: left;
  width: 300px;
}

#three_columns #where_we_are {
  float: right;
  width: 245px;
}

#people {
  padding: 30px 0 0 0;
}


.person {
  width: 860px;
  padding: 20px 0 0 0;
  margin: 0 0 5px 0;
}


.person .hr {margin: 6px 0;}

.person-photo {
  width: 190px;
  height: 236px;
  float: left;
  background: transparent url(/images/photo-border.png) top left no-repeat;
  position: relative;
  left: -5px;
}
.person-photo img {
  position: relative;
  left: 16px;
  top: 12px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.person-info {
  width: 657px;
  padding: 10px 0 0 0;
  float: right;
}

.person-info h3 {
  color: #cacaca;
  font-size: 1.8em;
}

.person-info h4 {
  color: #7a7168;
  font-size: 1.1em;
  text-transform: none;
}

.person-info p {color: #e6e0d9;}

#positions-cont {
  clear: both;
  width: 880px;
}

.position {
  width: 273px;
  margin: 20px 30px 20px 0;
  float: left;
}

.position.last {
  margin-right: 0;
}

#sticker-logo {
  margin: 0 15px 10px 5px;
  width: 100px;
  height: 101px;
  float: left;
  background: url(/images/sticker-logo.png) 0px 0px no-repeat;
}

#addresses {
  position: relative;
  float: right;
  padding: 10px 0 0 30px;
  height: 550px;
  margin-bottom: -550px;
  background: url(/images/vr.png) 0px 0px repeat-y;
}

.contact-address {
  padding-bottom: 30px;
}

.contact-address h4 {

  font-size: 14px;
  margin: 0;
}

.contact-address p {

  margin: 0;
  font-size: 12px;
  line-height: 18px;
}

#contact_form {
  position: relative;
  left: -80px;
}

/***************************
+ Training Page
***************************/

#main_sell {
  font-size: 1em;
  font-weight: bold;
}

.dark-content p.passion {
  text-align: center;
  padding: 8px 0 0 0;
  margin: 0;
  font-family: georgia, times, serif;
  color: #9a8e82;
  font-style: italic;
}

#visit_training {
  padding: 10px 0 0 0;
}

#visit_training a{
  display: block;
  width: 274px;
  height: 86px;
  margin: 0 auto;
  background: transparent url(/images/visit-training.png) 0 0 no-repeat;
  text-indent: -5000px;
}

#visit_training a:hover {background: transparent url(/images/visit-training.png) 0 -86px no-repeat;}

.training-testimonial {
  background: url(/images/quote.png) 60px 5px no-repeat;
  padding: 10px 75px;
  margin: 20px 0;
  position: relative;
  line-height: 22px;
  font-size: 13px;
  float: left;
  width: 285px;
}

.training-testimonial .author {
  position: absolute;
  bottom: -20px;
  right: 100px;
  width: 300px;
  text-align: right;
  color: #c8a872;
}

.training-testimonial .author a {
  font-style: italic;
  font-weight: normal;
  color: #c8a872;
  font-size: 14px;
  font-family: Georgia, serif;
}

.photo_credit {
  margin: 20px 0 0 0;
  padding: 5px 10px;
  -moz-border-radius: 6px;
  -webkit-border-radius: 6px;
  font-size: .9em;
  background:transparent url(/images/dark-content.png) repeat-x scroll 0 0;
  color: #7A7168;
}

.photo_credit a {color: #7A7168;}
.photo_credit a:hover {color: #a1988e;}


/***************************
+ Clients Page
***************************/

#clients .dark-content {
  margin-bottom: 25px;
}

#endorsements {
  float: left;
  width: 510px;
  padding: 20px 0 0 0;
  text-shadow: 0;
  position: relative;
}

#clients .column-right h3,
#clients #endorsements h3 {
  color: #7A7168;
  font-size: 1.3em;
  font-family: Gotham, Helvetica, Arial, sans-serf;
}

.endorsement {
  float: left;
  clear: both;
  padding-bottom: 20px;
}

.endorsement.last {
}

#clients blockquote{
  border-left: none;
  padding: 5px 0 0 0;
  font-style: normal;
  color: #cacaca;
  margin: 0 0 10px 0;  
}

#clients blockquote p {
  margin: 0;
}

#clients .credit {
  font-weight: bold;
  margin: 0 0 15px 0;
  line-height: 1.3;
  color: #fff;
}

ul#client-list li {
  float: left;
  width: 255px;
  padding-right: 20px;
  text-indent: 17px;
  background: url(/images/bullet.png) 0px 9px no-repeat;
  list-style-type: none;
  height: 25px;
  line-height: 25px;
  color: #d5cfc8;
  font-weight: bold;
  font-size: 1em;
}


/***************************
+ Portfolio Page
***************************/

.portfolio-thumb-content {
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  background: url(/images/dark-content.png) 0px 0px repeat-x;
  padding: 20px;
  width: 230px;
  height: 230px;
  float: left;
  border-bottom: 1px solid #3d3834;
  margin: 0 5px 20px 5px;
  position: relative;
}

.portfolio-thumb-content.middle {
  margin: 0 20px 20px 20px;
}

.portfolio-thumb-content h3 {
  text-shadow: #000 0 1px 1px;
  position: absolute;
  width: 250px;
  left: 10px;
  bottom: 10px;
  text-align: center;
  font-size: 22px;
  color: #948a84;
  font-family: Gotham, Etica, "Helvetica Neue", Helvetica, Arial, sans-serif;
}

.portfolio-thumb-frame {
  background: transparent url(/images/image-switcher.png) top left repeat-x;  
  border-bottom: 1px solid #000;  
  width: 210px;
  height: 180px;
  padding: 10px;
}

.portfolio-thumb {
  width: 210px;
  height: 180px;
  float: left;
  position: relative;
}

.portfolio-thumb a {
  text-decoration: none;
  display: block;
  width: 210px;
  height: 180px;
  position: absolute;
  background: url(/images/portfolio-thumb-hover.png) -210px 0px no-repeat;
}

.portfolio-page-content {
  -moz-border-radius: 10px;
  -webkit-border-radius: 10px;
  background: url(/images/dark-content.png) 0px 0px repeat-x;
  padding: 20px;
  width: 830px;
  float: left;
  border-bottom: 1px solid #3d3834;
  margin: 0 5px 20px 5px;
  position: relative;
}

.return {
	-moz-border-radius: 10px;
	-webkit-border-radius: 10px;
	background: url(/images/dark-content.png) 0px 0px repeat-x;
	float:right;
	width:150px;
	height:30px;
	margin:0 5px 30px 0;
}
/* ... */

